--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_profile">Perfil</string>
+    <string name="menu_logout">Cerrar sesión</string>
 
     <string name="prefs_file">com.edu.unal.biketrainer.PREFERENCE_FILE_KEY</string>
     <string name="facebook_app_id">390524631967880</string>
@@ -23,5 +25,7 @@
     <string name="steps_in_route">Steps in route</string>
     <string name="recording_route">Record Route</string>
     <string name="routes">Routes</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
