--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,11 @@
     <string name="routes">Routes</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_location_permission_explanation">Please, allow us to use your device location</string>
+    <string name="user_location_permission_not_granted">Sorry, permissions not yet granted</string>
+    <string name="new_location">New Location</string>
+    <string name="start_recording">START TRIP</string>
+    <string name="stop_recording">STOP RECORDING</string>
+    <string name="save_route">Save Route</string>
 
 </resources>
