--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,6 @@
     <string name="new_location">New Location</string>
     <string name="start_recording">START TRIP</string>
     <string name="stop_recording">STOP RECORDING</string>
-    <string name="save_route">Save Route</string>
+    <string name="save_route">SAVE</string>
 
 </resources>
