--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="route_request_failed">Route request failed</string>
     <string name="steps_in_route">Steps in route</string>
     <string name="recording_route">Record Route</string>
-    <string name="routes">Routes</string>
+    <string name="routes">Rutas</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user_location_permission_explanation">Please, allow us to use your device location</string>
@@ -33,5 +33,8 @@
     <string name="start_recording">START TRIP</string>
     <string name="stop_recording">STOP RECORDING</string>
     <string name="save_route">SAVE</string>
+    <string name="menu_routes_record">Nueva Ruta</string>
+    <string name="menu_routes_list">Rutas Disponibles</string>
+    <string name="go_back">Volver</string>
 
 </resources>
