--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,8 +35,12 @@
     <string name="save_route">SAVE</string>
     <string name="menu_routes_record">Nueva Ruta</string>
     <string name="menu_routes_list">Rutas Disponibles</string>
+    <string name="menu_routes_recommended_list">Rutas Recomendadas</string>
     <string name="go_back">Volver</string>
     <string name="menu_my_routes_list">Mis Rutas</string>
+    <string name="name_label_item">Ruta: </string>
+    <string name="level_label_item">Dificultad: </string>
+    <string name="security_label_item">Seguridad: </string>
 
     <string-array name="levels">
         <item>Facil</item>
